plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '3.1.3'
    id 'io.spring.dependency-management' version '1.1.3'
}

//配置统一信息,包括root项目
allprojects {
    group = 'com.sdnc'
    version = '1.0.0'
    //sourceCompatibility = '17'
    //targetCompatibility = '17'

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url 'https://maven.aliyun.com/repository/public' }
        maven { url 'https://app.camunda.com/nexus/content/groups/public' }
        maven { url 'https://maven.alfresco.com/nexus/content/groups/public' }
        //maven { url 'https://repo.maven.apache.org/maven2' }
        //maven { url 'https://repo1.maven.org/maven2' }
        //maven { url 'https://repo2.maven.org/maven2' }
        //maven { url 'https://repo.spring.io/release' }
        maven { url 'https://jitpack.io' }
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    // buildscript {
    //     repositories {
    //         mavenCentral()
    //     }
    //     dependencies {
    //         classpath 'org.springframework.boot:spring-boot-gradle-plugin:3.1.3'
    //     }
    //     compileJava {
    //         options.fork = true
    //         options.incremental = true
    //         options.failOnError = false
    //         options.deprecation = true
    //         options.compilerArgs += ['-parameters', '-Xdoclint:none', '-Xlint:none', '-nowarn']
    //     }
    // }

}

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
    compileOnly {
        extendsFrom annotationProcessor
    }
}

//配置共用的资源库信息
subprojects {
    apply plugin: 'java'
    apply plugin: 'application'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    //配置JVM参数
    // application {
    //     applicationDefaultJvmArgs = ['--add-opens,java.base/java.util=ALL-UNNAMED,--add-opens,java.base/java.lang=ALL-UNNAMED,--add-opens,java.base/java.lang.invoke=ALL-UNNAMED,--add-opens,java.base/java.util=ALL-UNNAMED,--add-opens,java.prefs/java.util.prefs=ALL-UNNAMED,--add-opens,java.prefs/java.util.prefs=ALL-UNNAMED,--add-opens,java.base/java.nio.charset=ALL-UNNAMED,--add-opens,java.base/java.net=ALL-UNNAMED,--add-opens,java.base/java.util.concurrent.atomic=ALL-UNNAMED,-XX:MaxMetaspaceSize=256m,-XX:+HeapDumpOnOutOfMemoryError,-Xms256m,-Xmx512m,-Dfile.encoding=UTF-8,-Duser.country=CN,-Duser.language=zh,-Duser.variant']
    // }

    //根据命令加载不同的配置文件
    def env = System.getProperty("file") ?: "dev"
    sourceSets {
        main {
            java {
                srcDirs = ["src/main/java"]
            }
            resources {
                srcDirs = ["src/main/resources/$env", "src/main/java"]
            }
        }
    }

    compileJava {
        options.fork = true
        options.incremental = true
        options.failOnError = false
        options.deprecation = true
        options.compilerArgs += ['-parameters', '-Xdoclint:none', '-Xlint:none', '-nowarn']
    }

    configurations {
        all*.exclude module: 'spring-boot-starter-logging'
        all*.exclude module: 'spring-boot-starter-tomcat'
        all*.exclude module: 'spring-boot-starter-json'
        all*.exclude module: 'undertow-websockets-jsr'
        all*.exclude module: 'logging-interceptor'
        all*.exclude module: 'kotlin-stdlib-jdk8'
        all*.exclude module: 'kotlin-stdlib-jdk7'
        all*.exclude module: 'commons-logging'
        all*.exclude module: 'jboss-logging'
        all*.exclude module: 'lettuce-core'
        all*.exclude module: 'slf4j-api'
        all*.exclude module: 'HikariCP'
        all*.exclude module: 'sql-gen'
        all*.exclude module: 'json'
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-aop'
        implementation 'org.springframework.boot:spring-boot-starter-jdbc'
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        implementation 'org.springframework.boot:spring-boot-starter-undertow'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        implementation 'com.tencentcloudapi:tencentcloud-sdk-java-sms:3.1.830'
        //implementation 'org.dromara.sms4j:sms4j-spring-boot-starter:2.0.1'
        //implementation 'com.fhs-opensource:easy-trans-spring-boot-starter:2.2.1'
        //implementation 'cn.dev33:sa-token-spring-boot-starter:1.30.0'
        //implementation 'org.springframework.pulsar:spring-pulsar-spring-boot-starter:0.1.0'
        //implementation 'cn.herodotus.oss:minio-spring-boot-starter:0.4.0'
        //implementation 'com.feiniaojin.ddd.ecosystem:pie:1.0'
        //implementation 'org.furyio:fury-core:0.1.0-alpha.1'
        implementation 'com.ibeetl:sql-springboot-starter:3.25.3-RELEASE'
        implementation 'com.ibeetl:sql-accelerator:3.25.3-RELEASE'
        //implementation 'com.ibeetl:sql-dynamic-table:3.25.3-RELEASE'
        //implementation 'com.ibeetl:sql-bean-encrypt:3.25.3-RELEASE'
        implementation 'com.ibeetl:sql-firewall:3.25.3-RELEASE'
        //implementation 'com.ibeetl:sql-tenant:3.25.3-RELEASE'
        implementation 'com.ibeetl:sql-xml:3.25.3-RELEASE'
        //implementation 'com.diffplug.gradle:goomph:3.42.2'
        implementation 'com.github.f4b6a3:ulid-creator:5.2.1'
        implementation 'com.github.chris2018998:beecp:3.4.2'
        implementation 'com.gitee.853103174:tinylog:3.4.6'
        implementation 'org.hashids:hashids:1.0.3'
        implementation 'org.noear:snack3:3.2.75'
        implementation 'redis.clients:jedis'
        compileOnly 'io.github.linpeilie:mapstruct-plus-spring-boot-starter:1.3.5'
        compileOnly 'org.projectlombok:lombok:1.18.28'
        runtimeOnly 'com.mysql:mysql-connector-j'
        annotationProcessor 'org.projectlombok:lombok:1.18.28'
        annotationProcessor 'io.github.linpeilie:mapstruct-plus-processor:1.3.5'
        annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
        //annotationProcessor 'org.springframework:spring-context'
        //testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

}
